<resources>
    <string name="app_name">CoChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="email">Email...</string>
    <string name="passsword">Passsword...</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="need_new_account">Need new Account</string>
    <string name="or_login_using_your">Or Login Using</string>
    <string name="phone">Phone</string>
    <string name="already_have_account">Already have Account ?</string>
    <string name="create_account">Create Account</string>
    <string name="username">username</string>
    <string name="status">status...</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="cochat">CoChat</string>
    <string name="title_activity_nav_main">NavMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>