<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:autofillHints="">
            </EditText>

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:hint="@string/passsword"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:autofillHints=""
                android:layout_below="@id/loginEmailEditText">
            </EditText>

            <Button
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="19dp"
                android:layout_marginLeft="19dp"
                android:layout_below="@id/forgetPasswordTextView">
            </Button>

            <TextView
                android:id="@+id/forgetPasswordTextView"
                android:text="@string/forget_password"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/loginPasswordEditText"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp">
            </TextView>

            <TextView
                android:id="@+id/needNewAccountTextView"
                android:text="@string/need_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/loginButton"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp">
            </TextView>

            <TextView
                android:id="@+id/loginUsingTextView"
                android:text="@string/or_login_using_your"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/needNewAccountTextView"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp">
            </TextView>

            <Button
                android:id="@+id/phoneLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginUsingTextView"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimary">
            </Button>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>