<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2E388"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4B378E"
        app:titleTextColor="#D2E388" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/settingToolBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        app:civ_border_width="5dp"
        android:src="@drawable/profileimage"
        app:civ_border_color="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/setUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:inputType="textMultiLine"
        android:hint="@string/username"
        android:textColorHint="#A72C5A"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="#4B378E"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/setStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setUserName"
        android:inputType="textMultiLine"
        android:hint="@string/status"
        android:textColorHint="#A72C5A"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="#4B378E"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""/>

    <Button
        android:id="@+id/updateSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setStatus"
        android:textColor="#0D193D"
        android:background="@drawable/stylerounded"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"/>

    <!--
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateSettingButton"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="Design and Developed by"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="Prankit Agarwal"/>
        -->

    <ImageView
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:src="@drawable/digital_india"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitEnd"/>
</RelativeLayout>